# ecr-credential-helper

./: .gitignore  Cargo.toml  README.md  cronjob-example.yaml  cronjob.yaml  entrypoint.sh  go.mod  go.sum  main.go
deploy/docker/: Dockerfile
deploy/docker/ecr-credential-helper/: Dockerfile
deploy/k8s/: Dockerfile
src/: main.rs
