[package]
name = "ecr-credential-helper"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.25"
dotenv = "0.15.0"
env_logger = "0.7.1"
k8s-openapi = { version = "0.6.0", default-features = false, features = ["v1_15"] }
kube = { version = "0.22.2", features = ["openapi"] }
log = "0.4.8"
rusoto_core = "0.42.0"
rusoto_ecr = "0.42.0"
serde_json = "1.0.44"
tokio = "0.2.0-alpha.6"
#kube = { version = "0.22.1", features = ["openapi"] }
#anyhow = "1.0.25"
#tokio = "0.2.5"