[package]
name = "ecr-credential-helper"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ecr-credential-helper"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.25"
dotenv = "0.15.0"
env_logger = "0.7.1"
k8s-openapi = { version = "0.6.0", default-features = false, features = ["v1_15"] }
kube = { version = "0.23.0", features = ["openapi"] }
log = "0.4.8"
rusoto_core = "0.42.0"
rusoto_ecr = "0.42.0"
serde_json = "1.0.44"
tokio = { version = "0.2.6", features = ["full"] }
futures = "0.3.1"
